# q2rad

./: .gitignore  README.md  build_and_publish.ps1  i18n.ps1  pyproject.toml  q2_gui.ini  q2apps.sqlite  q2gui.qss
assets/: install_linux.sh
demo_app/: demo_app.json  demo_data.json
docker-x11/: dockerfile  run-q2rad.sh
docs/: _e_modules.md  application.md  cookbook.md  first_app.md  index.md  run_demo.md
install/: get-q2rad.py
q2market/: demo_app.json.json  demo_app.json.version  demo_app2.json.json  demo_app2.json.version  q2market.json
q2rad/: __init__.py  __main__.py  q2actions.py  q2appmanager.py  q2appselector.py  q2constants.py  q2extensions.py  q2forms.py  q2i18n.py  q2lines.py  q2make.py  q2market.py  q2modules.py  q2packages.py  q2queries.py  q2rad.py  q2raddb.py  q2reports.py  q2stylesettings.py  q2utils.py  version.py
q2rad/locale/: q2rad.pot
q2rad/locale/de/: de.po  de.po~
q2rad/locale/de/LC_MESSAGES/: q2rad.mo
q2rad/locale/ru/: ru.po  ru.po~
q2rad/locale/ru/LC_MESSAGES/: q2rad.mo
test_app/: app1_db.sqlite  data1_db.sqlite
tests/: test_q2rad.py
tmp/: rep.html
