[tool.poetry]
name = "q2rad"
version = "0.1.0"
description = "RAD - database, GUI, reports"
authors = ["Andrei Puchko <andrei.puchko@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
q2gui = "latest"
q2db = "latest"
q2report = "latest"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
