[tool.poetry]
name = "q2rad"
version = "0.1.72"
description = "RAD - database, GUI, reports"
authors = ["Andrei Puchko <andrei.puchko@gmx.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8,<4.0"
q2gui = "^0.1.36"
q2db = "^0.1.9"
q2report = "^0.1.16"

[tool.poetry.scripts]
q2rad = "q2rad.q2rad:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
